onsulta de dados

--- a/text-elements/pre-textuais/listas/lista-siglas.tex
+++ b/text-elements/pre-textuais/listas/lista-siglas.tex
@@ -10,6 +10,7 @@
     \item[CDMA] \textit{Code Division Multiple Access}
     \item[CGI] \textit{Common Gateway Interface}
     \item[CLI] \textit{Command Line Interfaces}
+    \item[CPF] Cadastro de Pessoa Física
     \item[FI] \textit{Form Interpreter}
     \item[GB] Gigabyte
     \item[GIS] \textit{Geographic Information System}
