--- a/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/coleta-dados.tex
@@ -1,7 +1,8 @@
 \begin{figure}[H]
     \centering
-    \caption{Delivery Routes - Coleta de dados}
-    \includegraphics[width=0.6\textwidth]{./dados/figuras/fig14}
+    \caption{Delivery Routes - API - Coleta de dados}
+    \includegraphics[width=0.5\textwidth]{./dados/figuras/fig14}
+    %0.6 talvez
     \fonte{Autor}
     \label{fig:drPlacedAPI}
 \end{figure}
