--- a/text-elements/textuais/desenvolvimento/ferramentas.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas.tex
@@ -17,6 +17,5 @@ Este Capítulo descreve as ferramentas utilizadas para desenvolvimento do presen
 \section{MySQL}
 \input{text-elements/textuais/desenvolvimento/ferramentas/mysql.tex}
 
-\newpage
-\section{Apache}
-\input{text-elements/textuais/desenvolvimento/ferramentas/apache.tex}
+%\section{Apache}
+%\input{text-elements/textuais/desenvolvimento/ferramentas/apache.tex}
