--- a/text-elements/textuais/desenvolvimento/ferramentas/apache.tex
+++ b/text-elements/textuais/desenvolvimento/ferramentas/apache.tex
@@ -2,7 +2,7 @@ Em 1995, Robert McCool e seu grupo de pesquisa desenvolveram o servidor web Apac
 
 Segundo \citeonline{apache:webmedia}, o servidor web Apache é projetado para trabalhar com uma ampla variedade de plataformas e ambientes. Isto é possível devido à sua implementação  modular. Introduzindo modelos de processos MPM (Multi-Processing-Modules), responsáveis por gerenciar as portas de comunicação, aceitar conexões e alocar processos ou \textit{threads} para atendimento das requisições.
 
-Como \citeonline{apache:Marcelo} fala em seu artigo, o Apache é \textit{open source}, multi-plataforma mais utilizado em todo o mundo. As principais características do Apache são flexibilidade, altamente configurável, robustez, escalabilidade, pode ser configurado para diferentes funções e é composto de módulos separados onde cada um implementa uma característica diferente.
+Como \citeonline{apache:Marcelo} fala em seu artigo, o Apache é \textit{open source}, multi-plataforma mais utilizado em todo o mundo. As principais características do Apache são flexibilidade, altamente configurável, robustez, escalabilidade, pode ser configurado para diferentes funções e é modularizado, onde cada módulo implementa uma característica diferente.
 
 \citeonline{apache:magazine} comenta em uma edição da revista Infra Magazine que a excelência desta aplicação e a qualidade que um software \textit{open source} pode obter quando possui um desenvolvimento maduro e sério. O principal fator relacionado à performance é o número de instâncias do servidor. O Apache suporta um grande número de instâncias simultâneas, onde cada uma é relacionada a um cliente acessando o servidor, oferecendo também suporte a módulos que, quando instalados, adicionam funcionalidades ao servidor. Como exemplos, pode-se citar o \textit{mod\_php}, \textit{mod\_python}, \textit{mod\_ftp}, entre outros, o que permite que os usuários escrevam seus próprios módulos por meio da API do software.
 
