--- a/text-elements/textuais/desenvolvimento/desenvolvimento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento.tex
@@ -2,9 +2,7 @@
 
 \chapter{DESENVOLVIMENTO DA APLICAÇÃO}
 %https://rafaell-lycan.com/2015/construindo-restful-api-laravel-parte-1/
-
-%%% Rev-Madalozzo: Este parágrafo está ruim. Muito longo com poucas pausas. Não tem pontuação final nas frases, muitas vírgulas. Tenta refazer de uma maneira mais amigável para o leitor poder respirar :)
-A proposta para este trabalho foi a construção de uma API REST que possibilita a coleta das coordenadas geográficas dos pedidos gerados no estabelecimento, juntamente com o desenvolvimento de uma aplicação encarregada de gerenciar os pedidos como entregas com um painel de controle para geração de lotes de entregas. Em conjunto com o módulo de entrega, destinado ao motoboy, no qual consegue observar, em um mapa, a rota e pontos de parada que devem ser percorridos, tudo isso em tempo real.
+A proposta deste trabalho é a construção de uma API REST, a qual possibilita a coleta das coordenadas geográficas dos pedidos gerados nos estabelecimentos. Além disso, objetiva desenvolver uma aplicação para gerenciar, por meio de um painel de controle, a logística das entregas. Por fim, pretende fornecer ao motoboy um módulo de entregas, possibilitando a ele observar no mapa a rota e os pontos de parada que devem ser percorridos. Tal processo ocorre totalmente em tempo real, o que possibilita agilidade e segurança quanto ao destino final.
 
 \section{Softwares utilizados}
 
