--- a/text-elements/textuais/desenvolvimento/desenvolvimento/mod-gerenciamento.tex
+++ b/text-elements/textuais/desenvolvimento/desenvolvimento/mod-gerenciamento.tex
@@ -104,13 +104,15 @@ Ao selecionar a opção de menu “Motoboys”, o usuário consegue, então, ger
 \begin{figure}[H]
     \centering
     \caption{Delivery Routes - Edição do motoboy}
-    \includegraphics[width=0.9\textwidth]{./dados/figuras/fig19}
+    \includegraphics[width=1.0\textwidth]{./dados/figuras/fig19}
     \fonte{Autor}
     \label{fig:drEdicaoMotoby}
 \end{figure}
 
 \newpage
-Igualmente à tela de motoboys, a tela de pagamentos possui também uma tabela, dessa vez com o identificador e descrição dos registros cadastrados na base de dados, essa visualizada na \autoref{fig:drListaPagamentos}. A edição do registro é apresentada na \autoref{fig:drEdicaoPagamento}.
+Igualmente à tela de motoboys, a tela de pagamentos possui também uma tabela, dessa vez com o identificador e descrição dos registros cadastrados na base de dados, essa visualizada na \autoref{fig:drListaPagamentos}. 
+
+A edição do registro é apresentada na \autoref{fig:drEdicaoPagamento}.
 
 \begin{figure}[H]
     \centering
@@ -123,7 +125,7 @@ Igualmente à tela de motoboys, a tela de pagamentos possui também uma tabela, 
 \begin{figure}[H]
     \centering
     \caption{Delivery Routes - Edição do pagamento}
-    \includegraphics[width=0.9\textwidth]{./dados/figuras/fig21}
+    \includegraphics[width=1.0\textwidth]{./dados/figuras/fig21}
     \fonte{Autor}
     \label{fig:drEdicaoPagamento}
 \end{figure}
